--- a/script/index.html
+++ b/script/index.html
@@ -1,11 +1,14 @@
 <html>
 	<head>
-	<title>
-		Take appo
-	</title>
+		<title>
+			Take appo
+		</title>	
 	</head>
-	<body>
-		<h4>Hello world</h4>
-	</body>
 
+	<body>
+		<div style="text-align:center;">
+			<h1>Take appo</h1>
+			<h3>Coming soon ...</h3>
+		</div>
+	</body>
 </html>
