--- a/scripts/app/index.html
+++ b/scripts/app/index.html
@@ -40,5 +40,23 @@
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <!-- Slider Revolution -->
   <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+  <!--Google maps API linl-->
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCsbzuJDUEOoq-jS1HO-LUXW4qo0gW9FNs"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery.min.js"></script>
+<!--scroll animate block-->
+<script src="js/wow.min.js"></script>
+<!--Other main scripts-->
+<script src="js/all_scr.js"></script>
+<!--Bootstrap js-->  
+<script src="js/bootstrap.min.js"></script>
+<!--Map js-->
+<script type="text/javascript" src="js/map_index.js"></script>
+<script type="text/javascript" src="js/infobox.js"></script>
+<!--Slider Revolution-->
+<script type="text/javascript" src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+<script type="text/javascript" src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+<!--Parallax-->
+<script type="text/javascript" src="js/jquery.parallax-0.2-min.js"></script>
 </body>
 </html>
