--- a/scripts/app/index/index.html
+++ b/scripts/app/index/index.html
@@ -49,8 +49,8 @@
         </div>
       </div>
       <div class="start_descrition">
-        <h1>welcome to my city guide!<span></span></h1>
-        <span>See and visit interesting places. Share experiences with your friends. Simply.</span>
+        <h1>welcome to take appo<span></span></h1>
+        <span>Book your doctor appointment today.</span>
         <div class="search_promo">
           <div class="input-group">
             <input type="text" class="form-control" aria-label="...">
